tests/baselines/reference/exportNonInitializedVariablesSystem(strict=true).errors.txt
exportNonInitializedVariablesSystem.ts(1,4): error TS1123: Variable declaration list cannot be empty.
exportNonInitializedVariablesSystem.ts(2,1): error TS1214: Identifier expected. 'let' is a reserved word in strict mode. Modules are automatically in strict mode.
exportNonInitializedVariablesSystem.ts(2,1): error TS2304: Cannot find name 'let'.
exportNonInitializedVariablesSystem.ts(3,6): error TS1123: Variable declaration list cannot be empty.
exportNonInitializedVariablesSystem.ts(5,12): error TS7005: Variable 'a' implicitly has an 'any' type.
exportNonInitializedVariablesSystem.ts(6,12): error TS7005: Variable 'b' implicitly has an 'any' type.
exportNonInitializedVariablesSystem.ts(14,23): error TS7005: Variable 'b' implicitly has an 'any' type.
exportNonInitializedVariablesSystem.ts(15,16): error TS7005: Variable 'x' implicitly has an 'any' type.
exportNonInitializedVariablesSystem.ts(15,19): error TS7005: Variable 'y' implicitly has an 'any' type.
exportNonInitializedVariablesSystem.ts(15,22): error TS7005: Variable 'z' implicitly has an 'any' type.
exportNonInitializedVariablesSystem.ts(19,23): error TS7005: Variable 'b' implicitly has an 'any' type.
exportNonInitializedVariablesSystem.ts(20,16): error TS7005: Variable 'x' implicitly has an 'any' type.
exportNonInitializedVariablesSystem.ts(20,19): error TS7005: Variable 'y' implicitly has an 'any' type.
exportNonInitializedVariablesSystem.ts(20,22): error TS7005: Variable 'z' implicitly has an 'any' type.


==== exportNonInitializedVariablesSystem.ts (14 errors) ====
    var;
       
!!! error TS1123: Variable declaration list cannot be empty.
    let;
    ~~~
!!! error TS1214: Identifier expected. 'let' is a reserved word in strict mode. Modules are automatically in strict mode.
    ~~~
!!! error TS2304: Cannot find name 'let'.
    const;
         
!!! error TS1123: Variable declaration list cannot be empty.
    
    export var a;
               ~
!!! error TS7005: Variable 'a' implicitly has an 'any' type.
    export let b;
               ~
!!! error TS7005: Variable 'b' implicitly has an 'any' type.
    export var c: string;
    export let d: number;
    class A {}
    export var e: A;
    export let f: A;
    
    namespace B {
        export let a = 1, b, c = 2;
                          ~
!!! error TS7005: Variable 'b' implicitly has an 'any' type.
        export let x, y, z;
                   ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                      ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
                         ~
!!! error TS7005: Variable 'z' implicitly has an 'any' type.
    }
    
    module C {
        export var a = 1, b, c = 2;
                          ~
!!! error TS7005: Variable 'b' implicitly has an 'any' type.
        export var x, y, z;
                   ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                      ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
                         ~
!!! error TS7005: Variable 'z' implicitly has an 'any' type.
    }
    
    // Shouldn't be filtered
    export var a1 = 1;
    export let b1 = 1;
    export var c1: string = 'a';
    export let d1: number = 1;
    class D {}
    export var e1 = new D;
    export let f1 = new D;
    export var g1: D = new D;
    export let h1: D = new D;
    